--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
 Flask==2.0.3
 gunicorn==20.1.0
 requests==2.27.1
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+Werkzeug==2.1.2
+certifi==2022.5.18.1
+charset-normalizer==2.0.12
+click==8.1.3
+idna==3.3
+itsdangerous==2.1.2
+urllib3==1.26.9
