--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ requests==2.27.1
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 Werkzeug==2.1.2
+cachelib==0.9.0
+flask-caching==2.0.1
 certifi==2022.5.18.1
 charset-normalizer==2.0.12
 click==8.1.3
